# Spice

./: README.md  README_zh.md  pyproject.toml
examples/decision_hub_demo/: README.md  general_adapter.py  general_approval.py  general_execution.py  general_loop.py  general_outcome.py  general_state_feedback.py  run_demo.py  (+1 more)
spice/: language.py
tests/: test_continuation_resolver.py  test_decision_compare.py  test_decision_hub_general_adapter.py  test_decision_hub_general_approval.py  test_decision_hub_general_execution.py  test_decision_hub_general_loop.py  test_decision_hub_general_outcome.py  test_decision_hub_general_smoke.py  test_decision_hub_general_state_feedback.py  test_decision_profiles  test_domain_llm_advisory.py  test_entry_init_domain_assist.py  test_entry_setup.py  test_execution_context_pack.py  test_execution_permission.py  test_executor_discovery.py  test_executor_runtime.py  test_executor_skills.py  test_executor_status.py  test_general_candidates.py  test_general_decision_core.py  test_general_e2e.py  test_general_policy_adapter.py  test_general_reducer.py  test_llm_candidate_expander.py  test_llm_core_provider.py  test_llm_proposal_normalizer.py  test_llm_runtime_resolver.py  test_llm_simulation_runner.py  test_memory_context.py  test_perception_open_chronicle.py  test_perception_poll.py  test_runtime_approval_flow.py  test_runtime_claude_code_executor.py  test_runtime_codex_executor.py  test_runtime_doctor.py  test_runtime_dry_run_executor.py  test_runtime_full_loop_preview.py  test_runtime_hermes_executor.py  test_runtime_interactive_shell.py  (+14 more)
(+98 files in other folders)
