[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spice-runtime"
version = "0.3.1"
description = "Spice core runtime framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Spice Contributors" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "prompt_toolkit>=3.0",
  "rich>=13.0",
]

[project.optional-dependencies]
tui = ["prompt_toolkit>=3.0", "rich>=13.0"]

[project.urls]
Homepage = "https://github.com/Dyalwayshappy/Spice"
Repository = "https://github.com/Dyalwayshappy/Spice"

[project.scripts]
spice = "spice.entry.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["spice*"]
exclude = ["spice_personal*", "tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"spice.entry.assets" = ["*.json"]
"spice.decision.profiles" = ["*.md", "*.json"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.pyc", "*.pyo", "artifacts/*", ".spice/*", "*.log"]
